<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="dev.capra.mihai.weatherapp.activities.MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="25dp">

    <include
        layout="@layout/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/location"
        android:textColor="#ffffff"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/_7_u00b0_c"
        android:textColor="#ffffff"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location" />

    <ImageView
        android:id="@+id/today_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/moon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperature" />


    <ImageView
        android:id="@+id/sunrise_icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/sunrise"
        app:layout_constraintEnd_toStartOf="@+id/today_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/today_icon" />

    <TextView
        android:id="@+id/sunrise_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/time"
        app:layout_constraintEnd_toEndOf="@+id/sunrise_icon"
        app:layout_constraintStart_toStartOf="@+id/sunrise_icon"
        app:layout_constraintTop_toBottomOf="@+id/sunrise_icon" />

    <ImageView
        android:id="@+id/sunset_icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/sunset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/today_icon"
        app:layout_constraintTop_toTopOf="@+id/today_icon" />

    <TextView
        android:id="@+id/sunset_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/time_1"
        app:layout_constraintEnd_toEndOf="@+id/sunset_icon"
        app:layout_constraintStart_toStartOf="@+id/sunset_icon"
        app:layout_constraintTop_toBottomOf="@+id/sunset_icon" />

    <TextView
        android:id="@+id/today_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/last_updated"
        app:layout_constraintEnd_toEndOf="@+id/today_icon"
        app:layout_constraintStart_toStartOf="@+id/today_icon"
        app:layout_constraintTop_toBottomOf="@+id/today_icon" />

    <TextView
        android:id="@+id/today_min_max_temp_txt"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginTop="24dp"
        android:text="@string/c"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/sunrise_icon"
        app:layout_constraintStart_toStartOf="@+id/sunrise_icon"
        app:layout_constraintTop_toBottomOf="@+id/sunrise_time" />

    <TextView
        android:id="@+id/today_temperature_txt_const"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/temperature"
        app:layout_constraintEnd_toEndOf="@+id/sunrise_icon"
        app:layout_constraintStart_toStartOf="@+id/sunrise_icon"
        app:layout_constraintTop_toBottomOf="@+id/today_min_max_temp_txt" />

    <TextView
        android:id="@+id/wind_speed_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/wind_speed"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/today_icon"
        app:layout_constraintStart_toStartOf="@+id/today_icon"
        app:layout_constraintTop_toBottomOf="@+id/today_text" />

    <TextView
        android:id="@+id/breeze_const_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/breeze"
        app:layout_constraintEnd_toEndOf="@+id/today_icon"
        app:layout_constraintStart_toStartOf="@+id/today_icon"
        app:layout_constraintTop_toBottomOf="@+id/wind_speed_txt" />

    <TextView
        android:id="@+id/wind_direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/updated_1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/sunset_icon"
        app:layout_constraintStart_toStartOf="@+id/sunset_icon"
        app:layout_constraintTop_toBottomOf="@+id/sunset_time" />

    <TextView
        android:id="@+id/wind_direction_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/wind_direction"
        app:layout_constraintEnd_toEndOf="@+id/sunset_icon"
        app:layout_constraintStart_toStartOf="@+id/sunset_icon"
        app:layout_constraintTop_toBottomOf="@+id/wind_direction" />


    <LinearLayout
        android:id="@+id/horizontal_layout_days"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/last_updated_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/day1_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="12sp"
                tools:text="Thursday" />

            <ImageView
                android:id="@+id/day1_icon"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/app_name"
                android:src="@drawable/cloudyday" />

            <TextView
                android:id="@+id/day1_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/day1_temp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/day2_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="12sp"
                tools:text="Thursday" />

            <ImageView
                android:id="@+id/day2_icon"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/app_name"
                android:src="@drawable/cloudyday" />

            <TextView
                android:id="@+id/day2_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/day1_temp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/day3_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="12sp"
                tools:text="Thursday" />

            <ImageView
                android:id="@+id/day3_icon"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/app_name"
                android:src="@drawable/cloudyday" />

            <TextView
                android:id="@+id/day3_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/day1_temp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/day4_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="12sp"
                tools:text="Thursday" />

            <ImageView
                android:id="@+id/day4_icon"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/app_name"
                android:src="@drawable/cloudyday" />

            <TextView
                android:id="@+id/day4_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/day1_temp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/last_updated_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/last_update"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
